--- a/index.html
+++ b/index.html
@@ -254,8 +254,9 @@
                     <img src="IMAGES/3VolvosInRow.jpg" alt="3 Volvos In Row">
                     <div class="servicesContainer">
                         <h2>Privatleasing</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cm exercitationem rerum soluta eius
-                            odit facere?</p>
+                        <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cm exercitationem rerum soluta eius
+                            odit facere?</p>-->
+                        <p>Privatleasing med flexibilitet – en exklusiv Limovia-upplevelse.</p>
                     </div>
 
                     <div class="servicesButtons">
@@ -274,8 +275,9 @@
                     <img src="IMAGES/VolvoInterior.jpg" alt="Volvo Interior">
                     <div class="servicesContainer">
                         <h2>Abonnemang</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ullam deleniti ipsam
-                            voluptatibus magnam mollitia consectetur hic.</p>
+                        <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ullam deleniti ipsam
+                            voluptatibus magnam mollitia consectetur hic.</p>-->
+                        <p>Limovia Abonnemang – En smart, smidig och förutsägbar transportlösning.</p>
                     </div>
 
                     <div class="servicesButtons">
@@ -294,8 +296,9 @@
                     <img src="IMAGES/Airport.jpg" alt="Airport">
                     <div class="servicesContainer">
                         <h2>Flygplatstransfer</h2>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure neque consectetur sint eveniet
-                            odio tenetur, nulla distinctio est!</p>
+                        <!--<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure neque consectetur sint eveniet
+                            odio tenetur, nulla distinctio est!</p>-->
+                        <p>Res bekvämt och stilfullt med smidig transport till din destination.</p>
                     </div>
 
                     <div class="servicesButtons">
@@ -311,8 +314,9 @@
                     <img src="IMAGES/WeddingRings.jpg" alt="Wedding Rings">
                     <div class="servicesContainer">
                         <h2>Evenemangstransfer</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi laborum ces, nihil officia in
-                            expedita.</p>
+                        <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi laborum ces, nihil officia in
+                            expedita.</p>-->
+                        <p>Res med elegans och komfort till ditt evenemang.</p>
                     </div>
 
                     <div class="servicesButtons">
@@ -328,8 +332,9 @@
                     <img src="IMAGES/CarRainWindow.jpg" alt="Car Window View">
                     <div class="servicesContainer">
                         <h2>Timbokning</h2>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi esse vel fugit nihil. fugiat
-                            modi! Ea incidunt aperiam in.</p>
+                        <!--<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi esse vel fugit nihil. fugiat
+                            modi! Ea incidunt aperiam in.</p>-->
+                        <p>Limovias timbokning erbjuder en helt flexibel transportlösning anpassad efter dina behov.</p>
                     </div>
 
                     <div class="servicesButtons">
@@ -345,9 +350,10 @@
                     <img src="IMAGES/GuyOpensDoorForWoman.jpg" alt="">
                     <div class="servicesContainer">
                         <h2>Lokal Transfer</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ducimus vitae,
+                        <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ducimus vitae,
                             laudantium
-                            dolorum maxime vero sint reprehenderit consequatur?</p>
+                            dolorum maxime vero sint reprehenderit consequatur?</p>-->
+                        <p>Limovias lokala transfer erbjuder en smidig och bekväm transport inom staden.</p>
                     </div>
 
                     <div class="servicesButtons">
@@ -363,9 +369,11 @@
                     <img src="IMAGES/VolvoXC60BridgeUp.jpg" alt="Volvo XC60 Bridge Up">
                     <div class="servicesContainer">
                         <h2>Stad till Stad-transfer</h2>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, facilis quia et
+                        <!--<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, facilis quia et
                             praesentium
-                            consectetur fugiat modi! Ea incidunt aperiam in.</p>
+                            consectetur fugiat modi! Ea incidunt aperiam in.</p>-->
+                        <p>För den som föredrar marktransport framför flyg erbjuder Limovia en bekväm och exklusiv
+                            långdistans resa med bil.</p>
                     </div>
 
                     <div class="servicesButtons">
