--- a/service.html
+++ b/service.html
@@ -194,13 +194,14 @@
 
                 <div class="serviceInfoContent">
                     <h1>Avbokningspolicy</h1>
-                    <p class="serviceCancellation" id="serviceCancellation">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam iure
+                    <p class="serviceCancellation" id="serviceCancellation">Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Magnam iure
                         error sapiente incidunt,
                         sed
                         sequi voluptatem accusamus voluptates, beatae aliquam quae dicta perferendis adipisci vitae
                         earum
                         explicabo ab aliquid ratione suscipit illo.</p>
-
+                
                     <div class="serviceBookButton">
                         <ul>
                             <li><a href="#">Boka Nu</a></li>
