--- a/index.html
+++ b/index.html
@@ -162,11 +162,11 @@
                     </figcaption>
 
                     <figcaption class="aboutLimoviaText3">
-                        <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus voluptate laboriosam
+                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus voluptate laboriosam
                             repellat pariatur ratione harum quibusdam consequuntur sapiente tempore, ipsum nam tenetur
                             debitis natus dolores necessitatibus. Accusamus, dolorum. Dignissimos quae aliquid sit
-                            possimus! Delectus, ex est modi aspernatur magni obcaecati.</p>-->
-                        <p>Hos Limovia ser vi varje resa som mer än bara en transport från A till B – vi skapar en
+                            possimus! Delectus, ex est modi aspernatur magni obcaecati.</p>
+                        <!-- <p>Hos Limovia ser vi varje resa som mer än bara en transport från A till B – vi skapar en
                             personlig upplevelse. Våra
                             resenärer kan skräddarsy sin resa genom att välja bland exklusiva tilläggstjänster, såsom:
                             Underhållning – ljudböcker,
@@ -175,7 +175,7 @@
                             Lyxartiklar – tillgång till snacks, dryck och högkvalitativ Wi-Fi.
                             Alla våra fordon är noggrant utvalda för att erbjuda en lyxig och avkopplande miljö, med
                             eleganta interiörer och en
-                            design som skapar en exklusiv känsla.</p>
+                            design som skapar en exklusiv känsla.</p>-->
                     </figcaption>
                 </figure>
 
@@ -188,13 +188,13 @@
         <section class="aboutLimoviaHeroImage" id="aboutLimovia" data-offset="120">
             <div class="aboutLimoviaHeroText">
                 <h1 class="aboutLimoviaHeroTitle">Om oss</h1>
-                <!--<p class="aboutLimoviaHeroParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
+                <p class="aboutLimoviaHeroParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
                     sapiente illo odit! Placeat consectetur accusantium neque. Animi reiciendis doloribus voluptate eos
                     beatae dolores assumenda repellendus, eveniet sapiente earum qui, nam quos voluptas similique ab, id
                     amet dolorum commodi consectetur culpa ullam est delectus perferendis. Minus illum voluptatem nemo
                     doloribus ab sequi, dolorem facere perspiciatis. Alias quod quis molestiae ipsa illum quam delectus.
-                    Officiis corrupti veritatis amet nostrum sequi id sunt impedit eum neque soluta.</p>-->
-                <p class="aboutLimoviaHeroParagraph">På Limovia är din säkerhet det viktigaste. Våra chaufförer genomgår
+                    Officiis corrupti veritatis amet nostrum sequi id sunt impedit eum neque soluta.</p>
+                <!--<p class="aboutLimoviaHeroParagraph">På Limovia är din säkerhet det viktigaste. Våra chaufförer genomgår
                     bakgrundskontroller för att säkerställa trygghet och
                     professionalism. Alla fordon har modern säkerhetsteknik och genomgår regelbundna kontroller. Vi
                     erbjuder
@@ -202,7 +202,7 @@
                     kontinuerlig feedback
                     förbättrar vi våra tjänster och skapar en pålitlig reseupplevelse. Oavsett dina behov ser vi till
                     att du reser säkert,
-                    bekvämt och med högsta kvalitet.
+                    bekvämt och med högsta kvalitet.-->
                 </p>
             </div>
         </section>
@@ -254,9 +254,9 @@
                     <img src="IMAGES/3VolvosInRow.jpg" alt="3 Volvos In Row">
                     <div class="servicesContainer">
                         <h2>Privatleasing</h2>
-                        <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cm exercitationem rerum soluta eius
-                            odit facere?</p>-->
-                        <p>Privatleasing med flexibilitet – en exklusiv Limovia-upplevelse.</p>
+                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cm exercitationem rerum soluta eius
+                            odit facere?</p>
+                        <!-- <p>Privatleasing med flexibilitet – en exklusiv Limovia-upplevelse.</p>-->
                     </div>
 
                     <div class="servicesButtons">
@@ -275,9 +275,9 @@
                     <img src="IMAGES/VolvoInterior.jpg" alt="Volvo Interior">
                     <div class="servicesContainer">
                         <h2>Abonnemang</h2>
-                        <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ullam deleniti ipsam
-                            voluptatibus magnam mollitia consectetur hic.</p>-->
-                        <p>Limovia Abonnemang – En smart, smidig och förutsägbar transportlösning.</p>
+                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ullam deleniti ipsam
+                            voluptatibus magnam mollitia consectetur hic.</p>
+                        <!-- <p>Limovia Abonnemang – En smart, smidig och förutsägbar transportlösning.</p>-->
                     </div>
 
                     <div class="servicesButtons">
@@ -296,9 +296,9 @@
                     <img src="IMAGES/Airport.jpg" alt="Airport">
                     <div class="servicesContainer">
                         <h2>Flygplatstransfer</h2>
-                        <!--<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure neque consectetur sint eveniet
-                            odio tenetur, nulla distinctio est!</p>-->
-                        <p>Res bekvämt och stilfullt med smidig transport till din destination.</p>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure neque consectetur sint eveniet
+                            odio tenetur, nulla distinctio est!</p>
+                        <!--<p>Res bekvämt och stilfullt med smidig transport till din destination.</p>-->
                     </div>
 
                     <div class="servicesButtons">
@@ -314,9 +314,9 @@
                     <img src="IMAGES/WeddingRings.jpg" alt="Wedding Rings">
                     <div class="servicesContainer">
                         <h2>Evenemangstransfer</h2>
-                        <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi laborum ces, nihil officia in
-                            expedita.</p>-->
-                        <p>Res med elegans och komfort till ditt evenemang.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi laborum ces, nihil officia in
+                            expedita.</p>
+                        <!--<p>Res med elegans och komfort till ditt evenemang.</p>-->
                     </div>
 
                     <div class="servicesButtons">
@@ -332,9 +332,9 @@
                     <img src="IMAGES/CarRainWindow.jpg" alt="Car Window View">
                     <div class="servicesContainer">
                         <h2>Timbokning</h2>
-                        <!--<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi esse vel fugit nihil. fugiat
-                            modi! Ea incidunt aperiam in.</p>-->
-                        <p>Limovias timbokning erbjuder en helt flexibel transportlösning anpassad efter dina behov.</p>
+                       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi esse vel fugit nihil. fugiat
+                            modi! Ea incidunt aperiam in.</p>
+                        <!--<p>Limovias timbokning erbjuder en helt flexibel transportlösning anpassad efter dina behov.</p>-->
                     </div>
 
                     <div class="servicesButtons">
@@ -350,10 +350,10 @@
                     <img src="IMAGES/GuyOpensDoorForWoman.jpg" alt="">
                     <div class="servicesContainer">
                         <h2>Lokal Transfer</h2>
-                        <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ducimus vitae,
+                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ducimus vitae,
                             laudantium
-                            dolorum maxime vero sint reprehenderit consequatur?</p>-->
-                        <p>Limovias lokala transfer erbjuder en smidig och bekväm transport inom staden.</p>
+                            dolorum maxime vero sint reprehenderit consequatur?</p>
+                        <!--<p>Limovias lokala transfer erbjuder en smidig och bekväm transport inom staden.</p>-->
                     </div>
 
                     <div class="servicesButtons">
@@ -369,11 +369,11 @@
                     <img src="IMAGES/VolvoXC60BridgeUp.jpg" alt="Volvo XC60 Bridge Up">
                     <div class="servicesContainer">
                         <h2>Stad till Stad-transfer</h2>
-                        <!--<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, facilis quia et
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, facilis quia et
                             praesentium
-                            consectetur fugiat modi! Ea incidunt aperiam in.</p>-->
-                        <p>För den som föredrar marktransport framför flyg erbjuder Limovia en bekväm och exklusiv
-                            långdistans resa med bil.</p>
+                            consectetur fugiat modi! Ea incidunt aperiam in.</p>
+                    <!-- <p>För den som föredrar marktransport framför flyg erbjuder Limovia en bekväm och exklusiv
+                            långdistans resa med bil.</p>-->
                     </div>
 
                     <div class="servicesButtons">
@@ -442,11 +442,11 @@
                     </div>
                     <div class="carInfo">
                         <h1 class="CarName">Volvo XC90</h1>
-                        <!--<p class="carInfoParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
-                            officiis molestias blanditiis nobis quis iusto placeat nihil eaque veritatis modi.</p>-->
-                        <p class="carInfoParagraph">Volvo XC90 erbjuder lyx, säkerhet, avancerad teknik, rymlig
+                       <p class="carInfoParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
+                            officiis molestias blanditiis nobis quis iusto placeat nihil eaque veritatis modi.</p>
+                        <!-- <p class="carInfoParagraph">Volvo XC90 erbjuder lyx, säkerhet, avancerad teknik, rymlig
                             interiör, bekväma säten och effektiva motorer, inklusive
-                            plug-in hybrid. Perfekt för familjer och resor.</p>
+                            plug-in hybrid. Perfekt för familjer och resor.</p>-->
 
                         <div class="carSpecs">
 
@@ -506,11 +506,11 @@
                     </div>
                     <div class="carInfo">
                         <h1 class="CarName">Volvo S90</h1>
-                        <!--<p class="carInfoParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
-                            officiis molestias blanditiis nobis quis iusto placeat nihil eaque veritatis modi.</p>-->
-                        <p class="carInfoParagraph">Volvo S90 har elegant skandinavisk design, lyxig interiör, avancerad
+                        <p class="carInfoParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
+                            officiis molestias blanditiis nobis quis iusto placeat nihil eaque veritatis modi.</p>
+                    <!-- <p class="carInfoParagraph">Volvo S90 har elegant skandinavisk design, lyxig interiör, avancerad
                             säkerhet, rymlig kupé, bekväma säten, kraftfulla
-                            hybriddrivlinor</p>
+                            hybriddrivlinor</p>-->
                         <div class="carSpecs">
 
                             <div class="carSpecsIcons">
@@ -570,11 +570,11 @@
                     </div>
                     <div class="carInfo">
                         <h1 class="CarName">Volvo EX90</h1>
-                        <!--<p class="carInfoParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
-                            officiis molestias blanditiis nobis quis iusto placeat nihil eaque veritatis modi.</p>-->
-                        <p class="carInfoParagraph">Volvo EX90 är en toppmodern el-SUV med sju säten, banbrytande
+                       <p class="carInfoParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
+                            officiis molestias blanditiis nobis quis iusto placeat nihil eaque veritatis modi.</p>
+                    <!--   <p class="carInfoParagraph">Volvo EX90 är en toppmodern el-SUV med sju säten, banbrytande
                             lidar-säkerhet, hållbara material, lång räckvidd och
-                            intelligent energihantering.</p>
+                            intelligent energihantering.</p>-->
 
                         <div class="carSpecs">
 
@@ -635,11 +635,11 @@
                     </div>
                     <div class="carInfo">
                         <h1 class="CarName">Volvo EM90</h1>
-                        <!--<p class="carInfoParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
-                            officiis molestias blanditiis nobis quis iusto placeat nihil eaque veritatis modi.</p>-->
-                        <p class="carInfoParagraph">Volvo EM90 är en premium el-MPV med lounge-liknande interiör,
+                       <p class="carInfoParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
+                            officiis molestias blanditiis nobis quis iusto placeat nihil eaque veritatis modi.</p>
+                        <!--<p class="carInfoParagraph">Volvo EM90 är en premium el-MPV med lounge-liknande interiör,
                             förstklassig komfort, avancerad säkerhet, panoramatak,
-                            smart röststyrning och lång räckvidd.</p>
+                            smart röststyrning och lång räckvidd.</p>-->
 
                         <div class="carSpecs">
 
