--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
                 </div>
                 <hr class="numberShowHR">
                 <div class="numberCard">
-                    <p class="numberShowNumber">1</p>
+                    <p class="numberShowNumber">12</p>
                     <p class="numberShowText">Olika Regioner</p>
                 </div>
                 <hr class="numberShowHR">
                 <div class="numberCard">
-                    <p class="numberShowNumber">0</p>
+                    <p class="numberShowNumber">1 550</p>
                     <p class="numberShowText">Medlemmar</p>
                 </div>
             </div>
