--- a/customerDashboard.html
+++ b/customerDashboard.html
@@ -11,8 +11,9 @@
     <link rel="stylesheet" href="CSS/footer.css">
     <link rel="stylesheet" href="CSS/mediaQueries.css">
 
-    <link rel="stylesheet" href="CSS/dashboardLandingPage.css">
-
+    <link rel="stylesheet" href="CSS/dashboardHeader.css">
+    <link rel="stylesheet" href="CSS/dashboardHomepage.css">
+    
     <script defer src="JS/"></script>
 
     <!--  Raleway  -->
