--- a/customerDashboard.html
+++ b/customerDashboard.html
@@ -9,12 +9,11 @@
 
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/footer.css">
-    <link rel="stylesheet" href="CSS/mediaQueries.css">
 
     <link rel="stylesheet" href="CSS/dashboardHeader.css">
     <link rel="stylesheet" href="CSS/dashboardHomepage.css">
-    
-    <script defer src="JS/"></script>
+
+    <!--<script defer src="JS/"></script>-->
 
     <!--  Raleway  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -62,6 +61,32 @@
 
     </header>
     <main>
+        <div class="mainPageContainer">
+            <div class="mainProfileSideLinks">
+
+                <nav class="mainProfileLinks" id="mainProfileSideLinks">
+
+                    <ul>
+                        <li><a href="#">Översikt</a></li>
+                        <li><a href="#">Resor</a></li>
+                        <li><a href="#">Poäng</a></li>
+                        <li><a href="#">Leasing</a></li>
+                        <li><a href="#">Kampanjer</a></li>
+                        <li><a href="#">Profil</a></li>
+                        <li><a href="#">Support</a></li>
+                    </ul>
+
+                </nav>
+
+            </div>
+
+            <div class="mainProfileInfo">
+                <h1>hello</h1>
+            </div>
+
+        </div>
+
+
         <!--<nav class="smallNavigation" id="smallNavigation">
         
             <ul>
