--- a/customerDashboard.html
+++ b/customerDashboard.html
@@ -82,41 +82,98 @@
 
             <div class="mainProfileInfo">
 
-                <div class="welcomeText">
-                    <h1>Välkomen tillbaka Mr. Fontaine</h1>
+                <div class="welcomeMessage">
+                    <div class="welcomeText">
+                        <h1>Välkomen tillbaka Mr. Fontaine</h1>
+                    </div>
+
+                    <div class="welcomeImage">
+                        <img src="IMAGES/VolvoEX90Transparent2.png" alt="Volvo EX90 Transparent">
+                    </div>
                 </div>
 
-                <div class="nextTripSection">
+                <div class="dashboardInfoContainer">
 
-                    <div class="nextTripTitleAndButton">
+                    <div class="tripSection row1">
 
-                        <div class="nextTripTitle">
-                            <p>Nästa resa</p>
+                        <div class="nextTripSection sectionBorder">
+
+                            <div class="nextTripLeft">
+
+                                <div class="nextTripTitle">
+                                    <p>Nästa resa</p>
+                                </div>
+
+                                <div class="nextTripText">
+                                    <p>07 Jul</p>
+                                    <p>12:40</p>
+                                    <p>Volvo EX90</p>
+                                </div>
+
+                            </div>
+
+                            <div class="nextTripRight">
+                                <ul>
+                                    <li><a class="bookNewTripButton" href="#">Boka ny resa</a></li>
+                                    <li><a class="bookNewTripButton" href="#">Avbryt resa</a></li>
+                                </ul>
+                            </div>
+
                         </div>
 
-                        <div class="nextTripText">
-                            <p>07 Jul</p>
-                            <p>12:40</p>
-                            <p>Volvo EX90</p>
+                        <div class="prevoiusTripSection sectionBorder">
+
+                            <div class="prevoiusTrip">
+
+                                <h2>Senaste resa</h2>
+
+                                <div class="startPointEndPoint">
+                                    <div class="pointA">
+                                        <p>Solna</p>
+                                        <p>Frösundaviks alle 15, 169 03</p>
+                                    </div>
+                                    <div class="pointDivider">
+                                        <hr>
+                                    </div>
+                                    <div class="pointB">
+                                        <p>Upplands-Väsby</p>
+                                        <p>Blackebergsplan 5, 168 49, Upplands-Väsby</p>
+                                    </div>
+                                </div>
+
+                                <div class="tripLine">
+                                    <div class="tripDotOne"><span class="dot"></span></div>
+                                    <div class="middleLine">
+                                        <hr class="gradientLine">
+                                    </div>
+                                    <div class="tripDotTwo"><span class="dot"></span></div>
+                                </div>
+
+                                <div class="tripInfo">
+                                    <p>15 Apr. 12:38</p>
+                                    <p>Avstånd: 24,9 km</p>
+                                    <p>Move-U: 96 p</p>
+                                    <p>15 Apr. 12:55</p>
+                                </div>
+
+                            </div>
+
                         </div>
 
                     </div>
 
-                    <div class="bookNewTrip">
-                        <ul>
-                            <li><a class="bookNewTripButton" href="#">Boka ny resa</a></li>
-                        </ul>
+                    <div class="infoSection row2">
+
                     </div>
 
+                    <div class="infoSection row3"></div>
+                    <div class="infoSection row4"></div>
+                    <div class="infoSection row5"></div>
+                    <div class="infoSection row6"></div>
+                    <div class="infoSection row7"></div>
+                    <div class="infoSection row8"></div>
 
                 </div>
-
-
-
-
-
-
-
 
             </div>
 
