--- a/customerDashboard.html
+++ b/customerDashboard.html
@@ -121,63 +121,53 @@
 
                         </div>
 
-                        <div class="prevoiusTripSection sectionBorder">
+                        <div class="lastTripCard">
+                            <h2>Senaste resa</h2>
 
-                            <div class="prevoiusTrip">
-
-                                <h2>Senaste resa</h2>
-
-                                <div class="startPointEndPoint">
-                                    <div class="pointA">
-                                        <p>Solna</p>
-                                        <p>Frösundaviks alle 15, 169 03</p>
-                                    </div>
-                                    <div class="pointDivider">
-                                        <hr>
-                                    </div>
-                                    <div class="pointB">
-                                        <p>Upplands-Väsby</p>
-                                        <p>Blackebergsplan 5, 168 49, Upplands-Väsby</p>
-                                    </div>
+                            <div class="tripAddresses">
+                                <div class="tripStart">
+                                    <p><strong>Solna</strong></p>
+                                    <p>Frösundaviks alle 15, 169 03</p>
                                 </div>
 
-                                <div class="tripLine">
-                                    <div class="tripDotOne"><span class="dot"></span></div>
-                                    <div class="middleLine">
-                                        <hr class="gradientLine">
-                                    </div>
-                                    <div class="tripDotTwo"><span class="dot"></span></div>
-                                </div>
+                                <div class="tripDivider">|</div>
 
-                                <div class="tripInfo">
-                                    <p>15 Apr. 12:38</p>
-                                    <p>Avstånd: 24,9 km</p>
-                                    <p>Move-U: 96 p</p>
-                                    <p>15 Apr. 12:55</p>
+                                <div class="tripEnd">
+                                    <p><strong>Upplands-Väsby</strong></p>
+                                    <p>Blackebergsplan 5, 168 49</p>
                                 </div>
-
                             </div>
+
+                            <div class="tripLine">
+                                <span class="dot"></span>
+                                <hr class="tripGradientLine" />
+                                <span class="dot"></span>
+                            </div>
+
+                            <div class="tripDetails">
+                                <span>15 Apr. 12:38</span>
+                                <span>Avstånd: 24,9 km</span>
+                                <span>Move-U: 96 p</span>
+                                <span>15 Apr. 12:55</span>
+                            </div>
+                        </div>
+
+                        <div class="infoSection row2">
 
                         </div>
 
+                        <div class="infoSection row3"></div>
+                        <div class="infoSection row4"></div>
+                        <div class="infoSection row5"></div>
+                        <div class="infoSection row6"></div>
+                        <div class="infoSection row7"></div>
+                        <div class="infoSection row8"></div>
+
                     </div>
-
-                    <div class="infoSection row2">
-
-                    </div>
-
-                    <div class="infoSection row3"></div>
-                    <div class="infoSection row4"></div>
-                    <div class="infoSection row5"></div>
-                    <div class="infoSection row6"></div>
-                    <div class="infoSection row7"></div>
-                    <div class="infoSection row8"></div>
 
                 </div>
 
             </div>
-
-        </div>
 
     </main>
 
