--- a/customerDashboard.html
+++ b/customerDashboard.html
@@ -32,6 +32,8 @@
 
     <!-- Font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+
 </head>
 
 <body>
@@ -126,29 +128,27 @@
 
                             <div class="tripAddresses">
                                 <div class="tripStart">
-                                    <p><strong>Solna</strong></p>
-                                    <p>Frösundaviks alle 15, 169 03</p>
+                                    <p><i class="fas fa-map-marker-alt"></i> <strong>Solna</strong></p>
+                                    <p>Frösundaviks allé 15, 169 03</p>
                                 </div>
-
                                 <div class="tripDivider">|</div>
-
                                 <div class="tripEnd">
-                                    <p><strong>Upplands-Väsby</strong></p>
+                                    <p><i class="fas fa-map-marker-alt"></i> <strong>Upplands-Väsby</strong></p>
                                     <p>Blackebergsplan 5, 168 49</p>
                                 </div>
                             </div>
 
-                            <div class="tripLine">
-                                <span class="dot"></span>
+                            <div class="tripLineWrapper">
                                 <hr class="tripGradientLine" />
-                                <span class="dot"></span>
+                                <span class="dot left-dot"></span>
+                                <span class="dot right-dot"></span>
                             </div>
 
                             <div class="tripDetails">
-                                <span>15 Apr. 12:38</span>
-                                <span>Avstånd: 24,9 km</span>
-                                <span>Move-U: 96 p</span>
-                                <span>15 Apr. 12:55</span>
+                                <span><i class="fas fa-clock"></i> 15 Apr. 12:38</span>
+                                <span><i class="fas fa-ruler-horizontal"></i> Sträcka: 24,9 km</span>
+                                <span class="chip">Move-U: 96 p</span>
+                                <span><i class="fas fa-clock"></i> 15 Apr. 12:55</span>
                             </div>
                         </div>
 
