--- a/customerDashboard.html
+++ b/customerDashboard.html
@@ -64,7 +64,7 @@
     </header>
 
     <main>
-        
+
         <div class="mainPageContainer">
             <div class="mainProfileSideLinks">
 
@@ -105,12 +105,11 @@
                             <div class="nextTripLeft">
 
                                 <div class="nextTripTitle">
-                                    <p>Nästa resa</p>
+                                    <h2>Nästa resa</p>
                                 </div>
 
                                 <div class="nextTripText">
-                                    <p>07 Jul</p>
-                                    <p>12:40</p>
+                                    <p>07 Jul. 12:40</p>
                                     <p>Volvo EX90</p>
                                 </div>
 
@@ -119,7 +118,7 @@
                             <div class="nextTripRight">
                                 <ul>
                                     <li><a class="bookNewTripButton" href="#">Boka ny resa</a></li>
-                                    <li><a class="bookNewTripButton" href="#">Avbryt resa</a></li>
+                                    <li><a class="cancelTripButton" href="#">Avbryt resa</a></li>
                                 </ul>
                             </div>
 
