--- a/customerDashboard.html
+++ b/customerDashboard.html
@@ -100,29 +100,26 @@
 
                     <div class="tripSection row1">
 
-                        <div class="nextTripSection sectionBorder">
+                        <div class="nextTripSection">
 
                             <div class="nextTripLeft">
 
-                                <div class="nextTripTitle">
-                                    <h2>Nästa resa</p>
-                                </div>
+                                <h2 class="nextTripTitle">Nästa resa</h2>
 
-                                <div class="nextTripText">
-                                    <p>07 Jul. 12:40</p>
-                                    <p>Volvo EX90</p>
+                                <div class="nextTripInfo">
+                                    <span class="trip-time">07 Jul. 12:40</span>
+                                    <span class="trip-vehicle">Volvo EX90</span>
                                 </div>
 
                             </div>
 
                             <div class="nextTripRight">
-                                <ul>
-                                    <li><a class="bookNewTripButton" href="#">Boka ny resa</a></li>
-                                    <li><a class="cancelTripButton" href="#">Avbryt resa</a></li>
-                                </ul>
+                                <a href="#" class="btn btn-primary">Boka ny resa</a>
+                                <a href="#" class="btn btn-secondary">Avbryt resa</a>
                             </div>
 
                         </div>
+
 
                         <div class="lastTripCard">
                             <h2>Senaste resa</h2>
